Process Hacker

2.39
 * HIGHLIGHTS:
   * Improved compatibility with security and anti-cheat software
   * Fixed .NET process detection
 * OTHER CHANGES:
   * Improved tooltip information for dllhost.exe
   * Removed Terminator
   * Updated DotNetTools plugin:
     * Fixed .NET assembly tab performance issues
     * Added extra .NET memory counters to the .NET performance tab
     * Added "Show sizes in bytes" checkbox to the .NET performance tab
     * Added right-click menu to the .NET assembly tab
   * Updated ExtendedTools plugin:
     * Fixed "No process" disk event bug
   * Updated HardwareDevices plugin:
     * Fixed incorrect drive letters
     * Fixed drive letter and panel clipping issue

2.38
 * HIGHLIGHTS:
   * Added labels to indicate the maximum data point in each I/O graph
   * Graph grids now scale correctly when resized
   * Improved high DPI scaling
   * Added exploit mitigation policy information to process properties (Windows 8 and above)
   * Added File modified time and File size columns for processes and modules
   * Added Key modified time column for services
   * Clicking a tray icon now shows the pop-up UI (useful for touch-enabled devices)
   * The NetAdapters plugin has been renamed to HardwareDevices
     * This plugin shows network adapter and disk drive graphs
     * If you are manually upgrading, please delete NetAdapters.dll from the plugins folder
   * Updated UserNotes plugin:
     * Added "Collapse by default" option for processes
 * OTHER CHANGES:
   * Added "Start when I log on" option
   * Added "Not responding" text to tray icon rich pop-up for programs that are hung
   * Added right-click menu and double-click action for environment variables
   * Added dialog box to show long command line strings
   * Added Time stamp column for processes
   * Added -sysinfo command line parameter for opening System Information at startup
   * Added 32x32 icons for high DPI displays