@@ -326,10 +326,16 @@ typedef struct _PH_PERFORMANCE_CONTEXT
     HWND IoGraphHandle;
 } PH_PERFORMANCE_CONTEXT, *PPH_PERFORMANCE_CONTEXT;
 
+typedef struct _PH_ENVIRONMENT_ITEM
+{
+    PPH_STRING Name;
+    PPH_STRING Value;
+} PH_ENVIRONMENT_ITEM, *PPH_ENVIRONMENT_ITEM;
+
 typedef struct _PH_ENVIRONMENT_CONTEXT
 {
     HWND ListViewHandle;
-    PPH_LIST Values;
+    PH_ARRAY Items;
 } PH_ENVIRONMENT_CONTEXT, *PPH_ENVIRONMENT_CONTEXT;
 
 #endif
